# Cypress

./: .gitignore  README.md
.github/workflows/: build-and-release.yml  launcher-linux.yml
Container/: Containerfile
Launcher/: CypressLauncher.csproj
Launcher/CypressLauncher/: LauncherConfig.cs  MessageHandler.Core.cs  MessageHandler.Init.cs  MessageHandler.Launch.cs  PatchManager.cs  launcher.config.json
Launcher/Properties/: AssemblyInfo.cs
Launcher/wwwroot/: index.html
Launcher/wwwroot/css/: forms.css  profile.css
Launcher/wwwroot/js/: actions.js  auth.js  browser.js  data.js  instances.js  serverinfo.js
Server/: CMakeLists.txt  pch.h
Server/Source/Anticheat/: LoadoutValidator.cpp  ServerEventSyncListener.h
Server/Source/Core/: Client.cpp  Logging.cpp  Program.cpp  Server.cpp  VersionInfo.cpp
Server/Source/Cypress/Presence/: BFNPresenceManager.cpp
Server/Source/GameHooks/: fbServerHooks.cpp
Server/include/: CypressIdentity.h  FreeCam.h  MemUtil.h  SideChannel.cpp  SideChannel.h  eastl_arena_allocator.cpp  eastl_arena_allocator.h
Server/include/Cypress/Presence/: GW2PresenceManager.h
tools/cypress-servers/internal/master/: identity.go  master.go
tools/cypress-servers/internal/relay/: relay.go
